---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: ????
  Info:
    - Figure out the secret sauce
    - Show planet, fragment name & rate in relative gui
    - Horizontal line
    - Redesign the gui
    - Tweak the new gui
    - Require beacon interface and hook up the slider
    - Add remote interface to get the total core miners for this surface
    - Allocate newly placed core miners
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2025. 07. 29
  Info:
    - Initial commit