@@ -10,6 +10,7 @@ Date: ????
     - Require beacon interface and hook up the slider
     - Add remote interface to get the total core miners for this surface
     - Allocate newly placed core miners
+    - Clamp slider output to actually available seams
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 2025. 07. 29
